# remotivelabs-topology-examples

./: .gitattributes  .gitignore  README.md  emu_bridge.py  ruff.toml  run.sh
.github/agents/: pharaoh.activity-diagram-draft.agent.md  pharaoh.api-coverage-check.agent.md  pharaoh.arch-draft.agent.md  pharaoh.arch-review.agent.md  pharaoh.audit-fanout.agent.md  pharaoh.author.agent.md  pharaoh.block-diagram-draft.agent.md  pharaoh.bootstrap.agent.md  pharaoh.change.agent.md  pharaoh.context-gather.agent.md  (+63 more)
android/: .gitignore  Dockerfile  EMULATOR_ON_HOST.md  README.md  pyproject.toml
basic_restbus/: README.md
basic_restbus/python/: pyproject.toml
basic_restbus/python/update_restbus/: __main__.py
docs/: README.md  conf.py  index.rst  pharaoh.toml  requirements.txt  ubproject.toml
e2e_restbus/: Dockerfile  README.md  pyproject.toml
e2e_restbus/databases/: test.dbc
e2e_restbus/ecus/: ecu_a.py  ecu_b.py
e2e_restbus/testsuite/: test_virtual_interface.py
e2e_restbus/topology/: main.instance.yaml  tester.instance.yaml  topology.platform.yaml
edgeshark_for_podman/: README.md  docker-compose-localhost-podman.yaml
ethernet_p2p/: README.md
ethernet_p2p/tests/: pyproject.toml
ethernet_p2p/tests/pytest/: test_gateway.py
getting_started/: Dockerfile  README.md  pyproject.toml
getting_started/ecus/bcm/: __main__.py
getting_started/instances/: can_over_udp.instance.yaml  main.instance.yaml
getting_started/models/: bcm.instance.yaml
getting_started/models/bcm/: __main__.py
getting_started/platform/: topology.platform.yaml
getting_started/settings/: can_over_udp.settings.instance.yaml
getting_started/tests/: test_hazard_light.py  tester.instance.yaml
getting_started/topology/: bcm.instance.yaml  can_over_udp.instance.yaml  main.instance.yaml  settings.instance.yaml  tester.instance.yaml  topology.platform.yaml
jupyter_demo/: Dockerfile  README.md  docker-compose-broker.yml  docker-compose-jupyter.yml  docker-compose-udptools.yml
lighting_and_steering/: Dockerfile  Dockerfile.ihu  Dockerfile.jupyter  README.md  pyproject.toml
lighting_and_steering/containers/behave/features/steps/: blink_left_steps.py  example_steps.py
lighting_and_steering/containers/cloudfeeder/cloudfeeder/: __main__.py
lighting_and_steering/containers/jupyter/: car.ipynb
lighting_and_steering/containers/tester/: test_ping.py  test_simulate_driver.py
lighting_and_steering/databases/: body_can.dbc  driver_can.dbc  location_can.dbc  rearlight.ldf  someip.fibex.xml
lighting_and_steering/ecus/bcm/: __main__.py  log.py
lighting_and_steering/ecus/bcm/state_machines/: beams.py  gears.py  turn_signals.py
lighting_and_steering/ecus/gwm/: __main__.py
lighting_and_steering/ecus/ihu/: Dockerfile.ihu  __main__.py
lighting_and_steering/ecus/ihu/remotivelabs_android_emulator/: README.md  br_generic_props_to_aaos.py  br_location_to_emu.py
lighting_and_steering/ecus/ihu/remotivelabs_android_emulator/libs/vhal_emulator/: vhal_emulator.py
lighting_and_steering/ecus/location_ecu/: __main__.py
lighting_and_steering/ecus/rlcm/: __main__.py
lighting_and_steering/tests/ecus/bcm/: test_beams_state_machine.py  test_gears_state_machine.py  test_turn_signals_state_machine.py
lighting_and_steering/topology/: android.instance.yaml  can_over_udp.instance.yaml  jupyter.instance.yaml  main.instance.yaml  tester.instance.yaml  topology.platform.yaml
remotive_car/: DOCS.md  Dockerfile  README.md
remotive_car/common/jupyter/: car.ipynb  jupyter.instance.yaml  pyproject.toml
remotive_car/instances/android/: Dockerfile  Dockerfile.cloudfeeder  EMULATOR_ON_HOST.md  README.md  android_emulator.instance.yaml  android_emulator_in_docker.instance.yaml  android_emulator_on_host.instance.yaml  cloud_playback.instance.yaml  cuttlefish.compose.yaml  cuttlefish.instance.yaml  host_emulator.env  local_playback.instance.yaml  main.instance.yaml  pyproject.toml  run.sh
remotive_car/instances/android/android_emulator/: Dockerfile  start.sh
remotive_car/instances/android/playback/cloud/: __main__.py
remotive_car/instances/android/playback/local/: __main__.py  abs.py  sccm.py  tcu.py
remotive_car/models/ihu/python/: pyproject.toml
remotive_car/models/ihu/python/ihu/: __main__.py  broker_to_cuttlefish.py  broker_to_emulator.py
remotive_car/models/ihu/python/ihu/android/: __main__.py  br_location_to_emu.py  log.py
remotive_car/models/ihu/python/ihu/android/libs/adb/: adb_emulator.py
remotive_car/models/ihu/python/ihu/android/libs/vhal/: vhal_emulator.py
remotive_car/models/ihu/python/ihu/libs/cuttlefish/gnss/: gnss_client.py
remotive_car/models/ihu/python/ihu/libs/cuttlefish/vhal/: VehicleServer_pb2.py  VehicleServer_pb2.pyi  VehicleServer_pb2_grpc.py  vhal_client.py
remotive_car/models/ihu/python/ihu/libs/emulator/adb/: adb_emulator.py
remotive_car/models/ihu/python/ihu/libs/emulator/vhal/: vhal_emulator.py
remotive_car/models/sccm/python/: pyproject.toml
remotive_car/models/sccm/python/config/: google.json  logitech.json  moza.json  moza_v2.json
remotive_car/models/sccm/python/sccm/: __main__.py  args.py  config.py  device.py  device_control.py  event_loop.py  mapper.py  target.py
remotive_car/models/sccm/python/sccm/adapters/: ecu.py  evdev_device.py  evdev_to_topology_mapper.py  log.py  printer.py
remotive_car/models/sccm/python/tests/: test_config.py  test_device.py
remotive_car/tests/: pyproject.toml  tester.instance.yaml
remotive_car/tests/behave/features/: blink_left.feature  environment.py
remotive_car/tests/behave/features/steps/: example_steps.py
remotive_car/tests/pytest/: conftest.py  test_ping.py  test_simulate_driver.py
remotive_car/tests/pytest/android/: cuttlefish.instance.yaml  test_hvac.py  test_location.py
some_ip/: README.md  pyproject.toml
some_ip/db/: someip.fibex.xml
some_ip/ecus/ecu_a/: __main__.py
some_ip/ecus/ecu_b/: __main__.py
some_ip/test/: test_some_ip.py
some_ip/topology/: main.instance.yaml  network.platform.yaml  python-ecua.instance.yaml  python-ecub.instance.yaml
tesla/: README.md  can_over_udp.instance.yaml
(+230 files in other folders)
