[project]
name = "remotivelabs-topology-getting-started-example"
description = "RemotiveTopology Getting Started example"
version = "1.0.0"
readme = "README.md"
license-files = ["LICENSE"]

requires-python = ">=3.10,<4.0"

dependencies = [
  "pytest==8.4.2",
  "pytest-asyncio==1.0.0",
  "pytest-timeout==2.4.0",
  "remotivelabs-topology~=0.10.0",
]

[dependency-groups]
dev = [
  "poethepoet>=0.34.0",
  "ruff>=0.11.10",
  "mypy>=1.14.1",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.0.0",
]

[tool.uv.build-backend]
module-root = "models"
module-name = "bcm"

[tool.poe.tasks]
format = [{ cmd = "ruff format ." }, { cmd = "ruff check --fix ." }]
ruff = [{ cmd = "ruff check ." }, { cmd = "ruff format --check --diff ." }]
mypy = [{ cmd = "mypy ." }]
lint = ["ruff", "mypy"]
test = "echo no tests found..."

[tool.ruff]
extend = "../ruff.toml"

[tool.mypy]
python_version = "3.10"
disallow_untyped_calls = false
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
hide_error_codes = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
