[project]
name = "remotivelabs-topology-remotive-car-notebook"
version = "0.1.0"

requires-python = ">=3.10,<4.0"

dependencies = [
  "jupyterlab ==4.3.4",
  "ipywidgets ==8.1.5",
  "pillow ==11.1.0",
  "nbqa>=1.9.1",
  "remotivelabs-broker~=0.9.1",
  "remotivelabs-topology~=0.9.4",
]

[dependency-groups]
dev = ["poethepoet>=0.18.0", "ruff>=0.11.10", "mypy>=1.14.1"]

[tool.poe.tasks]
format = [{ cmd = "ruff format ." }, { cmd = "ruff check --fix ." }]
ruff = [{ cmd = "ruff check ." }, { cmd = "ruff format --check --diff ." }]
mypy = [{ cmd = "nbqa mypy ." }]
lint = ["ruff", "mypy"]
test = { cmd = "echo no tests" }
clean = { cmd = "jupyter nbconvert --clear-output --inplace **/*.ipynb" }

[tool.ruff]
extend = "../../../ruff.toml"

[tool.mypy]
python_version = "3.10"
disallow_untyped_calls = false
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
hide_error_codes = false
disable_error_code = ["top-level-await"]

[[tool.mypy.overrides]]
module = "ipywidgets.*"
ignore_missing_imports = true
